--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess The Color</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-</body>
+  </head>
+  <body>
+    <h1>Guess The Color</h1>
+    <h2>RGB (200, 100, 10)</h2>
+    <h3>Guess the color above</h3>
+
+    <div>
+      <button>New Colors</button>
+      <span>Let's Play!</span>
+      <button>Easy</button>
+      <button>Hard</button>
+    </div>
+  </body>
 </html>
