--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
   <body>
       <h1>
         Guess The Color<br>
-        <span id="rgbSpan">
-            RGB (200, 100, 10)
-        </span><br>
+        <span id="rgbSpan"></span><br>
         Select the correct color below
       </h1>
 
     <div id="statusBar">
       <button id="newColorsBtn">New Colors</button>
-      <span class="status">Let's Play!</span>
+      <span class="status"></span>
       <button id="easyBtn">Easy</button>
       <button id="hardBtn">Hard</button>
     </div>
